Create tic tac toe app

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,7 @@
 
   /* Primary and action colors */
   --color-action: #0000ff;
-  --color-action-secondary: #ffff00;
+  --color-action-secondary: #ff8c00;
   --color-action-25: #;
   --color-action-50: #;
   --color-action-100: #;
